<resources>
    <string name="app_name">Contacts-Nav</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="first_letter_in_contact_name">A</string>
    <string name="call">call</string>
    <string name="message">message</string>
    <string name="emptyMail">- - -</string>
    <string name="create_contact">Create contact</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="number_1">Number-1</string>
    <string name="number_2">Number-2</string>
    <string name="e_mail">E-mail</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="contacts">Contacts</string>
    <string name="contact_name">Contact Name</string>
    <string name="todo">TODO</string>
    <string name="sort_by">sort by</string>
    <string name="search">search</string>
    <string name="empty">empty</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="image_directory_name">profileImages</string>
    <string name="on_progress_feature">This feature is On progress</string>
    <string name="number_not_available">Number not available for Call</string>
    <string name="call_permission">Call permissions needed to make call</string>
    <string name="allow_permission">OK to allow from settings</string>
    <string name="uri_package">package</string>
    <string name="sure_delete">Are you sure to delete?</string>
    <string name="permanent_delete">permanently deleted, can not be retrieved</string>
    <string name="remove_from_favorite">removed from favorites</string>
    <string name="un_favorite">Un Favorite</string>
    <string name="add_to_favorite">added to favorite</string>
    <string name="undo">UNDO</string>
    <string name="image_format">.png</string>
    <string name="image">image</string>
    <string name="error">Error</string>
    <string name="loading">Loading System Contacts…\nIt may take long for First loading.</string>
    <string name="allow_app">Allow Contact Permission to Use Application</string>
    <string name="title_edit_contact_activity">Edit contact</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_allowed">Permission allowed</string>
    <string name="invalid_email">Invalid Email-id</string>
    <string name="invalid_number">Invalid, Must be \n Start with 6–9 \n length should be 10</string>
    <string name="invalid_number1">Invalid Number-1</string>
    <string name="invalid_number2">Invalid Number2</string>
    <string name="invalid">Invalid</string>
    <string name="file_missing">File Missing</string>
    <string name="instructions">Instructions</string>
    <string name="instructionsInfo">In Contacts\n\t\tLeft Swipe to Delete\n\t\tRight Swipe to add contact
        to favorites\n\nIn Favorites\n\t\tRight Swipe to remove from favorites\n\nview instructions again from Menu</string>
    <string name="mobile">Mobile</string>
    <string name="_91">+91</string>
    <string name="loadingg">Loading...</string>
    <!--    <string name="">emptyString</string>-->
</resources>